--- a/libInflate/Makefile
+++ b/libInflate/Makefile
@@ -7,7 +7,7 @@ all: libs
 	@:
 
 # just build all object files
-libs: clean png.o bitstream.o huffman.o inflate.o logging.o gzip.o checksum.o
+libs: clean png.o bitstream.o huffman.o image.o inflate.o logging.o gzip.o checksum.o fileutils.o
 	@:
 
 # build with debug flag
@@ -18,8 +18,14 @@ debug: all
 png.o: png.c
 	$(CC) png.c -c -o $(BUILDDIR)/png.o -I. $(CFLAGS)
 
+fileutils.o: fileutils.c
+	$(CC) fileutils.c -c -o $(BUILDDIR)/fileutils.o -I. $(CFLAGS)
+
 checksum.o: checksum.c
 	$(CC) checksum.c -c -o $(BUILDDIR)/checksum.o -I. $(CFLAGS)
+
+image.o: image.c
+	$(CC) image.c -c -o $(BUILDDIR)/image.o -I. $(CFLAGS)
 
 inflate.o: inflate.c
 	$(CC) inflate.c -c -o $(BUILDDIR)/inflate.o -I. $(CFLAGS)
